fix: Fix Token asset display for Mobile when label is too long

--- a/deeds-dapp-webapp/src/main/webapp/static/css/deeds.css
+++ b/deeds-dapp-webapp/src/main/webapp/static/css/deeds.css
@@ -154,6 +154,10 @@ body, .theme--dark.v-application {
   min-height: auto !important;
 }
 
+.height-auto {
+  height: auto !important;
+}
+
 .font-weight-normal {
   font-weight: normal !important;
 }
